Allow all origin patterns for CORS